# python_de_manabu_parsing

./: .gitignore  pyproject.toml
src/python_de_manabu_parsing/: my_module.py
src/python_de_manabu_parsing/01_構文解析入門/: math_parser.py
tests/: test_my_module.py
tests/others/: test_my_module.py
